Fix lint reported by ./build/gjslint.py
BUG=35
TBR=kassycoan@chromium.org

Review URL: https://codereview.appspot.com/6493052

--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -59,7 +59,7 @@ found in the LICENSE file.
   function onLoad() {
     if (!document.body)
       document.addEventListener('DOMContentLoaded', onLoad);
-    var filenames = ["../test_data/simple_trace.json"];
+    var filenames = ['../test_data/simple_trace.json'];
     loadTraces(filenames,
                createViewFromTraces);
   }
