--- a/trunk/src/timeline_analysis_test.html
+++ b/trunk/src/timeline_analysis_test.html
@@ -24,14 +24,14 @@ found in the LICENSE file.
     base.require('unittest');
     base.require('tracing_controller');
     base.require('test_utils');
-    base.require('timeline_model')
+    base.require('timeline_model');
     base.require('trace_event_importer');
     base.require('timeline_analysis');
     base.require('timeline_filter');
     base.require('tracks.timeline_counter_track');
     base.require('tracks.timeline_slice_track');
-    base.require('tracks.timeline_thread_track')
-    base.require('timeline'); /* TODO(nduca): reduce dependency to selection and track */
+    base.require('tracks.timeline_thread_track');
+    base.require('timeline'); /* TODO(nduca): reduce dependency */
   </script>
   <script>
     'use strict';
@@ -72,7 +72,7 @@ found in the LICENSE file.
         {name: 'a', args: {}, pid: 52, ts: 520, cat: 'foo', tid: 53, ph: 'B'},
         {name: 'a', args: {}, pid: 52, ts: 560, cat: 'foo', tid: 53, ph: 'E'},
         {name: 'aa', args: {}, pid: 52, ts: 640, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'aa', args: {}, pid: 52, ts: 700, cat: 'foo', tid: 53, ph: 'E'},
+        {name: 'aa', args: {}, pid: 52, ts: 700, cat: 'foo', tid: 53, ph: 'E'}
       ];
       var model = new TimelineModel(events);
 
@@ -92,7 +92,7 @@ found in the LICENSE file.
         {name: 'c', args: {}, pid: 52, ts: 620, cat: 'foo', tid: 53, ph: 'B'},
         {name: 'c', args: {}, pid: 52, ts: 660, cat: 'foo', tid: 53, ph: 'E'},
         {name: 'c', args: {}, pid: 52, ts: 740, cat: 'foo', tid: 53, ph: 'B'},
-        {name: 'c', args: {}, pid: 52, ts: 800, cat: 'foo', tid: 53, ph: 'E'},
+        {name: 'c', args: {}, pid: 52, ts: 800, cat: 'foo', tid: 53, ph: 'E'}
       ];
       var model = new TimelineModel(events);
 
@@ -181,7 +181,7 @@ found in the LICENSE file.
     }
 
     function createSelectionWithTwoCountersDiffSeriesDiffHits() {
-      var ctr1 = new TimelineCounter(null, 0, '','a');
+      var ctr1 = new TimelineCounter(null, 0, '', 'a');
       ctr1.seriesNames.push('bytesallocated');
       ctr1.seriesColors.push(0);
       ctr1.timestamps.push(0, 10, 20);
@@ -239,32 +239,32 @@ found in the LICENSE file.
       // Distance between start times is normally distributed, with mu = 16ms
       // and sigma = 3ms.
       var startTimes = [
-        0,             18.4362262859, 32.5378088645, 44.8978868054,
-        63.4772725504, 77.438888345,  92.0102867913, 99.6208686689,
-        119.150576393, 137.54545468,  153.991587743, 175.456095568,
+        0, 18.4362262859, 32.5378088645, 44.8978868054,
+        63.4772725504, 77.438888345, 92.0102867913, 99.6208686689,
+        119.150576393, 137.54545468, 153.991587743, 175.456095568,
         193.395772651, 205.691644582, 218.740054982, 239.308480724,
         250.880949151, 268.528689601, 281.950478133, 296.791635722,
         315.862427391, 333.954888221, 342.392899581, 362.364373939,
         377.593380892, 392.296896748, 415.779941407, 435.517713864,
-        454.581222491, 470.329018858, 488.37029095,  502.283017166,
-        521.15141113,  534.36224697,  554.425018316, 574.89913248,
-        589.60294439,  604.780562233, 615.481610668, 630.055628965,
+        454.581222491, 470.329018858, 488.37029095, 502.283017166,
+        521.15141113, 534.36224697, 554.425018316, 574.89913248,
+        589.60294439, 604.780562233, 615.481610668, 630.055628965,
         645.908449096, 661.776084055, 673.276049017, 689.776401428,
-        704.440135004, 716.33262401,  732.380086528, 743.970715322,
+        704.440135004, 716.33262401, 732.380086528, 743.970715322,
         756.506690025, 772.391485532, 794.636984401, 803.801415494,
         819.006502926, 837.610127549, 854.551103283, 875.170613672,
         891.508235124, 905.263299017, 929.309555683, 943.417968804,
         957.289319239, 972.302910569, 986.669355637, 1002.71558868,
         1013.83359637, 1030.16840733, 1040.39503139, 1057.61583325,
-        1075.64709686, 1086.67671319, 1100.4617455,  1118.4871842,
+        1075.64709686, 1086.67671319, 1100.4617455, 1118.4871842,
         1129.98143488, 1144.52318588, 1160.36966285, 1179.50049042,
         1195.03088169, 1215.98199401, 1226.66591838, 1245.83650314,
         1268.18058265, 1285.11047342, 1301.71570575, 1316.40723345,
-        1329.94342488, 1343.7569577,  1358.28267513, 1371.17560308,
+        1329.94342488, 1343.7569577, 1358.28267513, 1371.17560308,
         1386.42247119, 1401.51767749, 1417.52489051, 1440.98712348,
         1457.80113781, 1475.66079406, 1494.64137536, 1509.52941903,
         1524.54762552, 1545.42960714, 1565.19444597, 1580.56308936,
-        1596.72211651 ];
+        1596.72211651];
 
       var events = [];
 
@@ -364,7 +364,7 @@ found in the LICENSE file.
       appendTable: function(parent, className) {
         var table = {
           className: className,
-          rows: [],
+          rows: []
         };
         table.className = className;
         this.tables.push(table);
@@ -373,7 +373,7 @@ found in the LICENSE file.
 
       appendTableHeader: function(table, label) {
         if (table.tableHeader)
-          throw new Error("Only one summary header allowed.");
+          throw new Error('Only one summary header allowed.');
         table.tableHeader = label;
       },
 
@@ -396,7 +396,7 @@ found in the LICENSE file.
                          duration: duration,
                          occurences: occurences,
                          details: details});
-      },
+      }
     };
 
     function testAnalyzeSelectionWithSingleSlice() {
@@ -407,9 +407,9 @@ found in the LICENSE file.
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
       assertEquals('Selected slice:', table.tableHeader);
-      assertEquals(3, table.rows.length)
+      assertEquals(3, table.rows.length);
 
-      assertEquals("b", table.rows[0].text);
+      assertEquals('b', table.rows[0].text);
       assertEquals(0, table.rows[1].time);
       assertAlmostEquals(0.002, table.rows[2].time);
     }
@@ -433,10 +433,10 @@ found in the LICENSE file.
       this.addHTMLOutput(undefined, analysisEl);
       var rows = analysisEl.querySelectorAll('tr');
       assertEquals(rows.length, 7);
-      assertEquals(" bar", rows[5].children[0].textContent);
-      assertEquals("0", rows[5].children[1].textContent);
-      assertEquals(" foo", rows[6].children[0].textContent);
-      assertEquals("false", rows[6].children[1].textContent);
+      assertEquals(' bar', rows[5].children[0].textContent);
+      assertEquals('0', rows[5].children[1].textContent);
+      assertEquals(' foo', rows[6].children[0].textContent);
+      assertEquals('false', rows[6].children[1].textContent);
     }
 
     function testAnalyzeSelectionWithSingleSliceCategory() {
@@ -447,10 +447,10 @@ found in the LICENSE file.
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
       assertEquals('Selected slice:', table.tableHeader);
-      assertEquals(4, table.rows.length)
+      assertEquals(4, table.rows.length);
 
-      assertEquals("b", table.rows[0].text);
-      assertEquals("foo", table.rows[1].text);
+      assertEquals('b', table.rows[0].text);
+      assertEquals('foo', table.rows[1].text);
       assertEquals(0, table.rows[2].time);
       assertAlmostEquals(0.002, table.rows[3].time);
     }
@@ -463,22 +463,22 @@ found in the LICENSE file.
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
       assertEquals('Slices:', table.tableHeader);
-      assertEquals(6, table.rows.length)
+      assertEquals(6, table.rows.length);
 
-      assertEquals("a", table.rows[0].label);
+      assertEquals('a', table.rows[0].label);
       assertEquals(1, table.rows[0].occurences);
       assertAlmostEquals(0.04, table.rows[0].duration);
-      assertEquals("aa", table.rows[1].label);
+      assertEquals('aa', table.rows[1].label);
       assertEquals(1, table.rows[1].occurences);
       assertAlmostEquals(0.06, table.rows[1].duration);
-      assertEquals("*Totals", table.rows[2].label);
+      assertEquals('*Totals', table.rows[2].label);
       assertEquals(2, table.rows[2].occurences);
       assertAlmostEquals(0.1, table.rows[2].duration);
 
-      assertEquals("Selection start", table.rows[4].label);
+      assertEquals('Selection start', table.rows[4].label);
       assertAlmostEquals(0, table.rows[4].time);
 
-      assertEquals("Selection extent", table.rows[5].label);
+      assertEquals('Selection extent', table.rows[5].label);
       assertAlmostEquals(0.18, table.rows[5].time);
     }
 
@@ -490,20 +490,20 @@ found in the LICENSE file.
       assertEquals(1, results.tables.length);
       var table = results.tables[0];
 
-      assertEquals("Slices:", table.tableHeader);
-      assertEquals(5, table.rows.length)
+      assertEquals('Slices:', table.tableHeader);
+      assertEquals(5, table.rows.length);
 
-      assertEquals("c", table.rows[0].label);
-      assertEquals("2", table.rows[0].occurences);
+      assertEquals('c', table.rows[0].label);
+      assertEquals('2', table.rows[0].occurences);
       assertAlmostEquals(0.04, table.rows[0].details.min);
       assertAlmostEquals(0.05, table.rows[0].details.avg);
       assertAlmostEquals(0.06, table.rows[0].details.max);
       assertAlmostEquals(0.1, table.rows[0].duration);
-      assertEquals("*Totals", table.rows[1].label);
+      assertEquals('*Totals', table.rows[1].label);
       assertAlmostEquals(0.1, table.rows[1].duration);
-      assertEquals("Selection start", table.rows[3].label);
+      assertEquals('Selection start', table.rows[3].label);
       assertAlmostEquals(0, table.rows[3].time);
-      assertEquals("Selection extent", table.rows[4].label);
+      assertEquals('Selection extent', table.rows[4].label);
       assertAlmostEquals(0.18, table.rows[4].time);
     }
 
@@ -517,9 +517,9 @@ found in the LICENSE file.
       assertEquals('Selected counter:', table.tableHeader);
       assertEquals(3, table.rows.length);
 
-      assertEquals("Title", table.rows[0].label);
-      assertEquals("Timestamp", table.rows[1].label);
-      assertEquals("value", table.rows[2].label);
+      assertEquals('Title', table.rows[0].label);
+      assertEquals('Timestamp', table.rows[1].label);
+      assertEquals('value', table.rows[2].label);
       assertEquals(10, table.rows[2].text);
     }
 
