--- a/trunk/src/linux_perf_power_parser_test.html
+++ b/trunk/src/linux_perf_power_parser_test.html
@@ -77,7 +77,7 @@ function testCpuIdleImport() {
     '          <idle>-0     [001] 15050.993279: cpu_idle: ' +
                   'state=3 cpu_id=1',
     '          <idle>-0     [001] 15050.993457: cpu_idle: ' +
-                  'state=4294967295 cpu_id=1',
+                  'state=4294967295 cpu_id=1'
   ];
   var m = new tracing.TimelineModel(lines.join('\n'), false);
   assertEquals(0, m.importErrors.length);
