--- a/trunk/src/timeline_model_test.html
+++ b/trunk/src/timeline_model_test.html
@@ -34,23 +34,23 @@ var TimelineThread = tracing.TimelineThread;
 var TimelineModel = tracing.TimelineModel;
 var TimelineTitleFilter = tracing.TimelineTitleFilter;
 
-var createModelWithOneOfEverything = function() {
+function createModelWithOneOfEverything() {
   var m = new TimelineModel();
   var cpu = m.getOrCreateCpu(1);
   cpu.slices.push(test_utils.newSlice(1, 3));
 
-  var p = m.getOrCreateProcess(1)
+  var p = m.getOrCreateProcess(1);
   var t = p.getOrCreateThread(1);
   t.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 4));
   t.asyncSlices.push(test_utils.newAsyncSlice(0, 1, t, t));
 
-  var c = p.getOrCreateCounter("", "ProcessCounter");
+  var c = p.getOrCreateCounter('', 'ProcessCounter');
   c.seriesNames.push('a', 'b');
   c.seriesColors.push(0, 1);
   c.timestamps.push(0, 1, 2, 3);
   c.samples.push(5, 10, 6, 15, 5, 12, 7, 16);
 
-  var c1 = cpu.getOrCreateCounter("", "CpuCounter");
+  var c1 = cpu.getOrCreateCounter('', 'CpuCounter');
   c1.seriesNames.push('a', 'b');
   c1.seriesColors.push(0, 1);
   c1.timestamps.push(0, 1, 2, 3);
@@ -163,7 +163,7 @@ function testTimelineModel_updateCategories() {
   t.pushSlice(new TimelineThreadSlice('categoryA', 'a', 0, 1, {}, 3));
   t.pushSlice(new TimelineThreadSlice('', 'a', 0, 1, {}, 3));
   m.updateCategories_();
-  assertArrayEquals(["categoryA", "categoryB"], m.categories);
+  assertArrayEquals(['categoryA', 'categoryB'], m.categories);
 }
 </script>
 </body>
