--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -84,13 +84,14 @@ found in the LICENSE file.
       assertEquals(0, timeline.numVisibleTracks);
     }
 
-    function NoCountersFilter() {}
+    function NoCountersFilter() {
+    }
     NoCountersFilter.prototype = {
       __proto__: tracing.TimelineFilter.prototype,
       matchCounter: function(c) {
         return false;
       }
-    }
+    };
 
     function testFilteredCounters() {
       var model = new tracing.TimelineModel();
@@ -114,7 +115,7 @@ found in the LICENSE file.
       matchCpu: function(c) {
         return false;
       }
-    }
+    };
 
     function testFilteredCpus() {
       var model = new tracing.TimelineModel();
@@ -130,13 +131,14 @@ found in the LICENSE file.
       assertEquals(0, timeline.numVisibleTracks);
     }
 
-    function NoProcessesFilter() {}
+    function NoProcessesFilter() {
+    }
     NoProcessesFilter.prototype = {
       __proto__: tracing.TimelineFilter.prototype,
       matchProcess: function(c) {
         return false;
       }
-    }
+    };
 
     function testFilteredProcesses() {
       var model = new tracing.TimelineModel();
@@ -152,13 +154,14 @@ found in the LICENSE file.
       assertEquals(0, timeline.numVisibleTracks);
     }
 
-    function NoThreadsFilter() {}
+    function NoThreadsFilter() {
+    }
     NoThreadsFilter.prototype = {
       __proto__: tracing.TimelineFilter.prototype,
       matchThread: function(c) {
         return false;
       }
-    }
+    };
 
     function testFilteredThreads() {
       var model = new tracing.TimelineModel();
