--- a/trunk/src/timeline_viewport_test.html
+++ b/trunk/src/timeline_viewport_test.html
@@ -18,8 +18,8 @@ found in the LICENSE file.
 <script>
   'use strict';
 
-  // The test harness considers no tests as a failure. So, until we get a viewport test,
-  // this nop serves to keep this file passing.
+  // The test harness considers no tests as a failure. So, until we get a
+  // viewport test, this nop serves to keep this file passing.
   function testNoop() {
   }
 </script>
