--- a/trunk/src/tracks/timeline_slice_group_track_test.html
+++ b/trunk/src/tracks/timeline_slice_group_track_test.html
@@ -30,8 +30,8 @@ found in the LICENSE file.
 
   function testSubRowBuilderBasic() {
     var group = new TimelineSliceGroup();
-    var sA = group.pushSlice(newSliceNamed("a", 1, 2));
-    var sB = group.pushSlice(newSliceNamed("a", 3, 1));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 2));
+    var sB = group.pushSlice(newSliceNamed('a', 3, 1));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -45,8 +45,8 @@ found in the LICENSE file.
 
   function testSubRowBuilderBasic2() {
     var group = new TimelineSliceGroup();
-    var sA = group.pushSlice(newSliceNamed("a", 1, 4));
-    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 4));
+    var sB = group.pushSlice(newSliceNamed('b', 3, 1));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -62,8 +62,8 @@ found in the LICENSE file.
 
   function testSubRowBuilderNestedExactly() {
     var group = new TimelineSliceGroup();
-    var sA = group.pushSlice(newSliceNamed("a", 1, 4));
-    var sB = group.pushSlice(newSliceNamed("b", 1, 4));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 4));
+    var sB = group.pushSlice(newSliceNamed('b', 1, 4));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -79,8 +79,8 @@ found in the LICENSE file.
 
   function testSubRowBuilderInstantEvents() {
     var group = new TimelineSliceGroup();
-    var sA = group.pushSlice(newSliceNamed("a", 1, 0));
-    var sB = group.pushSlice(newSliceNamed("b", 2, 0));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 0));
+    var sB = group.pushSlice(newSliceNamed('b', 2, 0));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -94,8 +94,8 @@ found in the LICENSE file.
 
   function testSubRowBuilderTwoInstantEvents() {
     var group = new TimelineSliceGroup();
-    var sA = group.pushSlice(newSliceNamed("a", 1, 0));
-    var sB = group.pushSlice(newSliceNamed("b", 1, 0));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 0));
+    var sB = group.pushSlice(newSliceNamed('b', 1, 0));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -113,8 +113,8 @@ found in the LICENSE file.
     // Pattern being tested:
     // [    a     ][   b   ]
     // Where insertion is done backward.
-    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
-    var sA = group.pushSlice(newSliceNamed("a", 1, 2));
+    var sB = group.pushSlice(newSliceNamed('b', 3, 1));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 2));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -134,8 +134,8 @@ found in the LICENSE file.
     // [    a     ]
     //   [  b   ]
     // Where insertion is done backward.
-    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
-    var sA = group.pushSlice(newSliceNamed("a", 1, 5));
+    var sB = group.pushSlice(newSliceNamed('b', 3, 1));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 5));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -155,9 +155,9 @@ found in the LICENSE file.
     // Pattern being tested:
     // [    a    ]
     // [  b1 ]  []<- b2 where b2.duration = 0 and b2.end == a.end.
-    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
-    var sB1 = group.pushSlice(newSliceNamed("b1", 1, 2));
-    var sB2 = group.pushSlice(newSliceNamed("b2", 4, 0));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 3));
+    var sB1 = group.pushSlice(newSliceNamed('b1', 1, 2));
+    var sB2 = group.pushSlice(newSliceNamed('b2', 4, 0));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -175,9 +175,9 @@ found in the LICENSE file.
     // Pattern being tested:
     // [    a     ]   [  c   ]
     //   [  b   ]
-    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
-    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
-    var sC = group.pushSlice(newSliceNamed("c", 5, 0));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 3));
+    var sB = group.pushSlice(newSliceNamed('b', 1.5, 1));
+    var sC = group.pushSlice(newSliceNamed('c', 5, 0));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -196,10 +196,10 @@ found in the LICENSE file.
     // [    a     ]   [  d   ]
     //   [  b   ]
     //    [ c ]
-    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
-    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
-    var sC = group.pushSlice(newSliceNamed("c", 1.75, 0.5));
-    var sD = group.pushSlice(newSliceNamed("c", 5, 0.25));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 3));
+    var sB = group.pushSlice(newSliceNamed('b', 1.5, 1));
+    var sC = group.pushSlice(newSliceNamed('c', 1.75, 0.5));
+    var sD = group.pushSlice(newSliceNamed('c', 5, 0.25));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
@@ -215,8 +215,8 @@ found in the LICENSE file.
   function testTrackFiltering() {
     var group = new TimelineSliceGroup();
 
-    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
-    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
+    var sA = group.pushSlice(newSliceNamed('a', 1, 3));
+    var sB = group.pushSlice(newSliceNamed('b', 1.5, 1));
 
     var track = new TimelineSliceGroupTrack();
     track.group = group;
