--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -25,6 +25,7 @@ found in the LICENSE file.
     'linux_perf_cpufreq_parser_test.html',
     'linux_perf_drm_parser_test.html',
     'linux_perf_exynos_parser_test.html',
+    'linux_perf_gesture_parser_test.html',
     'linux_perf_i915_parser_test.html',
     'linux_perf_mali_parser_test.html',
     'linux_perf_power_parser_test.html',
