--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -14,6 +14,7 @@ found in the LICENSE file.
     'timeline_async_slice_group_test.html',
     'timeline_find_control_test.html',
     'timeline_slice_group_test.html',
+    'timeline_stream_importer_test.html',
     'timeline_thread_test.html',
     'timeline_process_test.html',
     'timeline_category_filter_dialog_test.html',
